Formatting cleanup and extra usage of segmentPairsFrom().